@@ -65,6 +65,7 @@ function ayaspirit_setup() {
 	// This theme uses wp_nav_menu() in header menu
 	register_nav_menus( array(
 		'primary'   => esc_html__( 'Primary Menu', 'ayaspirit' ),
+		'footer'    => esc_html__( 'Footer Menu', 'ayaspirit' ),
 	) );
 
 	/*
