@@ -97,16 +97,16 @@ function ayaspirit_IsLargeResolution() {
 function ayaspirit_init_loading_effects() {
 
     jQuery('#header-logo').addClass("hidden").viewportChecker({
-            classToAdd: 'animated fadeInLeft',
+            classToAdd: 'animated bounce',
             offset: 1
           });
 
-    jQuery('#navmain').addClass("hidden").viewportChecker({
-            classToAdd: 'animated bounceInRight',
+    jQuery('#navmain a').addClass("hidden").viewportChecker({
+            classToAdd: 'animated rubberBand',
             offset: 1
           });
 
-    jQuery('#page-header, article h1').addClass("hidden").viewportChecker({
+    jQuery('#page-header').addClass("hidden").viewportChecker({
             classToAdd: 'animated bounceInUp',
             offset: 1
           });
@@ -123,7 +123,7 @@ function ayaspirit_init_loading_effects() {
           });
 
     jQuery('#sidebar').addClass("hidden").viewportChecker({
-            classToAdd: 'animated bounceInRight',
+            classToAdd: 'animated zoomIn',
             offset: 1
           });
 
@@ -132,9 +132,15 @@ function ayaspirit_init_loading_effects() {
             offset: 1
           });
 
-    jQuery('article p, article li')
+    jQuery('.header-social-widget')
         .addClass("hidden").viewportChecker({
-            classToAdd: 'animated fadeInLeft',
+            classToAdd: 'animated bounceInLeft',
+            offset: 1
+          });
+
+    jQuery('article, article p, article li')
+        .addClass("hidden").viewportChecker({
+            classToAdd: 'animated zoomIn',
             offset: 1
           });
 
@@ -144,9 +150,21 @@ function ayaspirit_init_loading_effects() {
             offset: 1
           });
 
-    jQuery('#footer-main p, #footer-main li')
+    jQuery('#footer-main p, #footer-main ul, #footer-main li, .footer-title, .col3a, .col3b, .col3c')
         .addClass("hidden").viewportChecker({
-            classToAdd: 'animated fadeInLeft',
+            classToAdd: 'animated zoomIn',
+            offset: 1
+          });
+
+    jQuery('.footer-social-widget')
+        .addClass("hidden").viewportChecker({
+            classToAdd: 'animated rubberBand',
+            offset: 1
+          });
+
+    jQuery('#footer-menu')
+        .addClass("hidden").viewportChecker({
+            classToAdd: 'animated bounceInDown',
             offset: 1
           });
 }
